--- a/UskudarDenetim.UI/Views/Home/Index.cshtml
+++ b/UskudarDenetim.UI/Views/Home/Index.cshtml
@@ -1,5 +1,12 @@
 ﻿@{
     ViewBag.Title = "Ana Sayfa";
-   
 }
 
+@Html.Partial("_Banner")
+@Html.Partial("_OurServices")
+@Html.Partial("_WhatWeDo")
+@Html.Partial("_FAQAndMaster")
+@Html.Partial("_Employees")
+<div class="dt-sc-margin100"></div>
+@Html.Partial("_ReachUS")
+@Html.Partial("_ContactUS")
