--- a/UskudarDenetim.UI/Content/dark/dark.css
+++ b/UskudarDenetim.UI/Content/dark/dark.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 
 	body { background-color:#2c3e50; color:#6b849d; }
@@ -49,7 +49,7 @@
 	
 		ul.dt-sc-tabs-vertical-frame li a, .skill-detail p:first-child, .dt-sc-contact-info.type2 .contact-icon h4 a, .dt-sc-contact-info.type2 .contact-icon h4, .copyright p, .copyright p a, .footer-links li a, .dt-sc-contact-info p, .dt-sc-contact-info a:hover, ul.commentlist li .author-name a, .author-desc h5 a, .woocommerce .star-rating span:before, .woocommerce-page .star-rating span:before, .woocommerce .star-rating:before, .woocommerce-page .star-rating:before, .star-rating:before, .star-rating { color:#6684a1; }
 		
-	.footer-widgets-wrapper, .presentation-bg, .product-presentation-bg, .full-section-bg { background:url(images/presentation-bg-dark.jpg) repeat-y left top #2c3e50 }	
+	.footer-widgets-wrapper, .presentation-bg, .product-presentation-bg, .full-section-bg { background:url(../Images/presentation-bg-dark.jpg) repeat-y left top #2c3e50 }	
 	#footer .widget-title { border-color:#34495e; }
 	.bottom-tweet:before { border-top-color:#38526c; }
 	.pagination .next-post a:before { border-left-color:#44607b; }
