Menu ve diğer sayfalar düzenlendi. Önyüz geliştirmeleri

--- a/UskudarDenetim.UI/Views/Home/About.cshtml
+++ b/UskudarDenetim.UI/Views/Home/About.cshtml
@@ -1,9 +1,79 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-@model UskudarDenetim.Core.EntityModel.ModelAddress
+﻿<!-- **Full-width-section - Starts** -->
+<div class="parallax full-width-bg">
+    <div class="container">
+        <div class="main-title">
+            <h1>Hakkımızda</h1>
 
-@Html.TextBoxFor(x => x.Ad);
+        </div>
+    </div>
+</div>
 
+<div class="full-width-section grey1">
+    <div class="dt-sc-margin70"></div>
+    <div class="container">
+        <div class="hr-title dt-sc-hr-invisible-small">
+            <h3>Hakkımızda </h3>
+            <div class="title-sep"> </div>
+        </div>
+        <!-- **column - Starts** -->
+        <div class="column dt-sc-three-fifth first">
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <div class="dt-sc-margin25"></div>
+            <blockquote class="type1"> <q>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old this is the larger one and this is really a larger one.</q> </blockquote>
+            <div class="dt-sc-margin25"></div>
+            <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. That dosen't seem as a literature of this kind.</p>
+        </div> <!-- **column - Ends** -->
+        <!-- **column - Starts** -->
+        <div class="column dt-sc-two-fifth">
+            <!-- **recent-gallery-container - Starts** -->
+            <div class="recent-gallery-container">
+                <!-- **recent-gallery - Starts** -->
+                <ul class="recent-gallery">
+                    <li> <img src="http://placehold.it/1170x767&text=Blog" alt="image" /> </li>
+                    <li> <img src="http://placehold.it/1170x767&text=Blog" alt="image" /> </li>
+                    <li> <img src="http://placehold.it/1170x767&text=Blog" alt="image" /> </li>
+                    <li> <img src="http://placehold.it/1170x767&text=Blog" alt="image" /> </li>
+                </ul> <!-- **recent-gallery - Ends** -->
+                <!-- **bx-pager - Starts** -->
+                <div id="bx-pager">
+                    <a href="#" data-slide-index='0'><img src='http://placehold.it/1170x767&text=Blog' alt='' title='' /></a>
+                    <a href="#" data-slide-index='1'><img src='http://placehold.it/1170x767&text=Blog' alt='' title='' /></a>
+                    <a href="#" data-slide-index='2'><img src='http://placehold.it/1170x767&text=Blog' alt='' title='' /></a>
+                    <a href="#" data-slide-index='3'><img src='http://placehold.it/1170x767&text=Blog' alt='' title='' /></a>
+                </div> <!-- **bx-pager - Ends** -->
+            </div><!-- **recent-gallery-container - Ends** -->
+
+        </div> <!-- **column - Ends** -->
+
+    </div> <!-- **container - Ends** -->
+    <div class="dt-sc-margin50"></div>
+</div><!-- **Full-width-section - Ends** -->
+
+
+<div class="column dt-sc-one-half first">
+    <div class="hr-title">
+        <h3>Neden Üsküdar Denetim?</h3>
+        <div class="title-sep"> </div>
+    </div>
+    <!-- **dt-sc-toggle-frame-set - Starts** -->
+    <div class="dt-sc-toggle-frame-set">
+        <h5 class="dt-sc-toggle-accordion active"> <a href="#">Various Options and Features</a></h5>
+        <div class="dt-sc-toggle-content">
+            <div class="block">
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old this is the larger one. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
+            </div>
+        </div>
+        <h5 class="dt-sc-toggle-accordion"> <a href="#">Exclusive Documentation</a></h5>
+        <div class="dt-sc-toggle-content">
+            <div class="block">
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old this is the larger one. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
+            </div>
+        </div>
+        <h5 class="dt-sc-toggle-accordion"> <a href="#">Exclusive Documentation</a></h5>
+        <div class="dt-sc-toggle-content">
+            <div class="block">
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old this is the larger one. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
+            </div>
+        </div>
+    </div> <!-- **dt-sc-toggle-frame-set - Ends** -->
+</div> 
