--- a/UskudarDenetim.UI/Views/Shared/_AdminLayout.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminLayout.cshtml
@@ -4,8 +4,7 @@
 <!--[if IE 9 ]>    <html lang="en-gb" class="isie ie9 no-~/Scripts"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
 <html lang="tr-TR" class="no-js">
- <!--<![endif]-->
-
+<!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -16,7 +15,7 @@
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.~/Scripts"></script>
     <![endif]-->
-
+    @**@
     <link runat="server" rel="icon" href="~/favicon.ico" type="image/x-icon" />
     <link href="~/Content/style.css" rel="stylesheet" />
     <link href="~/Content/shortcodes.css" rel="stylesheet" />
@@ -33,18 +32,16 @@
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     <!-- **Font Awesome** -->
     <!-- **Google - Fonts** -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
+    @*<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>*@
 </head>
-
 <body>
     <div class="loader-wrapper">
         <div id="loader-image"></div>
     </div>
     <div class="wrapper">
         <div class="inner-wrapper">
-            @Html.Partial("_AdminHeader")
+            @Html.Partial("_Header")
             <div id="main">
                 @RenderBody()
             </div>
@@ -71,8 +68,6 @@
     <script src="~/Scripts/layerslider.transitions.js"></script>
     <script src="~/Scripts/layerslider.kreaturamedia.jquery.js"></script>
     <script src="~/Scripts/greensock.js"></script>
-    <script data-cfasync="false" type="text/javascript">var lsjQuery = jQuery;</script>
-    <script data-cfasync="false" type="text/javascript">lsjQuery(document).ready(function () { if (typeof lsjQuery.fn.layerSlider == "undefined") { lsShowNotice('layerslider_11', 'jquery'); } else { lsjQuery("#layerslider_11").layerSlider({ responsiveUnder: 1240, layersContainer: 1170, startInViewport: false, pauseOnHover: false, forceLoopNum: false, autoPlayVideos: false, skinsPath: '../Scripts/layerslider/skins/' }) } });</script>
     <script src="~/Scripts/responsive-nav.js" type="text/javascript"></script>
     <script src="~/Scripts/jquery.meanmenu.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="~/Scripts/jquery.tipTip.minified.js"></script>
