--- a/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
@@ -12,36 +12,33 @@
     <title>Üsküdar Denetim Yeminli Mali Müşavir</title>
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link runat="server" rel="icon" href="~/favicon.ico" type="image/x-icon" />
+    @Styles.Render("~/bundles/css")
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.~/Scripts"></script>
     <![endif]-->
+    @*
+        <link href="~/Content/style.css" rel="stylesheet" />
+        <link href="~/Content/shortcodes.css" rel="stylesheet" />
+        <link href="~/Content/additional-css/attorney/style.css" rel="stylesheet" />
 
-    <link runat="server" rel="icon" href="~/favicon.ico" type="image/x-icon" />
-    <link href="~/Content/style.css" rel="stylesheet" />
-    <link href="~/Content/shortcodes.css" rel="stylesheet" />
-    <link href="~/Content/additional-css/attorney/style.css" rel="stylesheet" />
+        <link id="skin-css" rel="stylesheet" href="~/Content/skins/blueturquoise/style.css" type="text/css" media="all" />
 
-    <link id="skin-css" rel="stylesheet" href="~/Content/skins/blueturquoise/style.css" type="text/css" media="all" />
-
-    <link href="~/Content/layerslider.css" rel="stylesheet" />
-    <!-- **Additional - stylesheets** -->
-    <link href="~/Content/responsive.css" rel="stylesheet" />
-    <link href="~/Content/meanmenu.css" rel="stylesheet" />
-    <link href="~/Content/prettyPhoto.css" rel="stylesheet" />
-    <link href="~/Content/animations.css" rel="stylesheet" />
-    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
-    <!-- **Font Awesome** -->
-    <!-- **Google - Fonts** -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+        <link href="~/Content/layerslider.css" rel="stylesheet" />
+        <!-- **Additional - stylesheets** -->
+        <link href="~/Content/responsive.css" rel="stylesheet" />
+        <link href="~/Content/meanmenu.css" rel="stylesheet" />
+        <link href="~/Content/prettyPhoto.css" rel="stylesheet" />
+        <link href="~/Content/animations.css" rel="stylesheet" />
+        <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
+        <!-- **Font Awesome** -->        <!-- **Google - Fonts** -->*@
+    @*<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>*@
 
 </head>
 
 <body>
-    <div class="loader-wrapper">
-        <div id="loader-image"></div>
-    </div>
+  
     <div class="wrapper">
         <div class="inner-wrapper">
             @Html.Partial("_TopBar")
@@ -54,39 +51,40 @@
     </div>
 
     @RenderSection("scripts", required: false)
-    <script src="~/Scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery-migrate.min.js"></script>
-    <script src="~/Scripts/preloader.js" type="text/javascript"></script>
-    <script src="~/Scripts/pace.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.tabs.min.js"></script>
-    <script src="~/Scripts/jquery.tipTip.minified.js"></script>
-    <script src="~/Scripts/jquery-easing-1.3.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.parallax-1.1.3.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.inview.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.viewport.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.nav.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.jcarousel.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.carouFredSel-6.2.1-packed.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.isotope.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.prettyPhoto.js" type="text/javascript"></script>
-    <script src="~/Scripts/masonry.pkgd.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/layerslider.transitions.js"></script>
-    <script src="~/Scripts/layerslider.kreaturamedia.jquery.js"></script>
-    <script src="~/Scripts/greensock.js"></script>
+    @Scripts.Render("~/bundles/javascript")
+    @*<script src="~/Scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery-migrate.min.js"></script>
+        <script src="~/Scripts/preloader.js" type="text/javascript"></script>
+        <script src="~/Scripts/pace.min.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.tabs.min.js"></script>
+        <script src="~/Scripts/jquery.tipTip.minified.js"></script>
+        <script src="~/Scripts/jquery-easing-1.3.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.parallax-1.1.3.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.inview.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.viewport.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.nav.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.jcarousel.min.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.carouFredSel-6.2.1-packed.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.isotope.min.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.prettyPhoto.js" type="text/javascript"></script>
+        <script src="~/Scripts/masonry.pkgd.min.js" type="text/javascript"></script>
+        <script src="~/Scripts/layerslider.transitions.js"></script>
+        <script src="~/Scripts/layerslider.kreaturamedia.jquery.js"></script>
+        <script src="~/Scripts/greensock.js"></script>*@
     <script data-cfasync="false" type="text/javascript">var lsjQuery = jQuery;</script>
     <script data-cfasync="false" type="text/javascript">lsjQuery(document).ready(function () { if (typeof lsjQuery.fn.layerSlider == "undefined") { lsShowNotice('layerslider_11', 'jquery'); } else { lsjQuery("#layerslider_11").layerSlider({ responsiveUnder: 1240, layersContainer: 1170, startInViewport: false, pauseOnHover: false, forceLoopNum: false, autoPlayVideos: false, skinsPath: '../Scripts/layerslider/skins/' }) } });</script>
-    <script src="~/Scripts/responsive-nav.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.meanmenu.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="~/Scripts/jquery.tipTip.minified.js"></script>
-    <!-- **Sticky Nav** -->
-    <script src="~/Scripts/jquery.sticky.js" type="text/javascript"></script>
-    <!-- **To Top** -->
-    <script src="~/Scripts/jquery.ui.totop.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="~/Scripts/twitter/jquery.tweet.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/retina.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.nicescroll.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/custom.js" type="text/javascript"></script>
+    @*<script src="~/Scripts/responsive-nav.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.meanmenu.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src="~/Scripts/jquery.tipTip.minified.js"></script>
+        <!-- **Sticky Nav** -->
+        <script src="~/Scripts/jquery.sticky.js" type="text/javascript"></script>
+        <!-- **To Top** -->
+        <script src="~/Scripts/jquery.ui.totop.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src="~/Scripts/twitter/jquery.tweet.min.js"></script>
+        <script type="text/javascript" src="~/Scripts/jquery.validate.min.js"></script>
+        <script src="~/Scripts/retina.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.nicescroll.min.js" type="text/javascript"></script>
+        <script src="~/Scripts/custom.js" type="text/javascript"></script>*@
 
 </body>
 </html>
