--- a/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
@@ -32,13 +32,15 @@
         <link href="~/Content/animations.css" rel="stylesheet" />
         <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
         <!-- **Font Awesome** -->        <!-- **Google - Fonts** -->*@
-    @*<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>*@
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 </head>
 
 <body>
-  
+    <div class="loader-wrapper">
+        <div id="loader-image"></div>
+    </div>
     <div class="wrapper">
         <div class="inner-wrapper">
             @Html.Partial("_TopBar")
